# raven-hydro-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml  conda_build_config.yaml
.ci_support/: linux_64_.yaml  linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.12.____cpython.yaml  linux_64_python3.13.____cp313.yaml  linux_64_python3.14.____cp314.yaml  linux_64_python3.8.____73_pypy.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____73_pypy.yaml  linux_64_python3.9.____cpython.yaml  linux_aarch64_.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.11.____cpython.yaml  linux_aarch64_python3.12.____cpython.yaml  linux_aarch64_python3.13.____cp313.yaml  linux_aarch64_python3.14.____cp314.yaml  linux_aarch64_python3.8.____cpython.yaml  linux_aarch64_python3.9.____73_pypy.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_ppc64le_.yaml  linux_ppc64le_python3.10.____cpython.yaml  linux_ppc64le_python3.11.____cpython.yaml  linux_ppc64le_python3.12.____cpython.yaml  linux_ppc64le_python3.13.____cp313.yaml  linux_ppc64le_python3.14.____cp314.yaml  linux_ppc64le_python3.8.____cpython.yaml  linux_ppc64le_python3.9.____73_pypy.yaml  linux_ppc64le_python3.9.____cpython.yaml  osx_64_.yaml  osx_64_python3.10.____cpython.yaml  osx_64_python3.11.____cpython.yaml  osx_64_python3.12.____cpython.yaml  osx_64_python3.13.____cp313.yaml  osx_64_python3.14.____cp314.yaml  osx_64_python3.8.____73_pypy.yaml  osx_64_python3.8.____cpython.yaml  osx_64_python3.9.____73_pypy.yaml  osx_64_python3.9.____cpython.yaml  osx_arm64_.yaml  osx_arm64_python3.10.____cpython.yaml  (+16 more)
.circleci/: config.yml
.github/: CODEOWNERS
recipe/: 0001-fix-makefile.patch  0002-fix-CMakeLists.patch  0002-fix-makefile-windows.patch  CMakeLists.txt  bld.bat  build.bat  meta.yaml
